--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,46 @@
 /*  your css code here. If applicable */
+body {
+  font-family: Arial, sans-serif;
+  background: #f5f5f5; 
+  height: 100vh;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.container {
+  background: white;
+  padding: 40px 50px;
+  border: 2px solid black;
+  border-radius: 12px;
+  text-align: center;
+  width: 600px;
+}
+
+/* OTP container */
+.code-container {
+  display: flex;
+  justify-content: center;
+  gap: 15px;
+  margin: 30px 0;
+}
+
+/* Input boxes */
+.code {
+  width: 70px;
+  height: 80px;
+
+  font-size: 40px;
+  text-align: center;
+
+  border: 1px solid #ccc;
+  border-radius: 6px;
+
+  outline: none;
+}
+
+.code:focus {
+  border-color: dodgerblue;
+  box-shadow: 0 0 5px dodgerblue;
+}
